--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,3 +15,11 @@ html {
     @apply max-w-[1200px] mx-auto px-6;
   }
 }
+
+.button-rainbow {
+  position: relative;
+  background-color: hsla(0, 0%, 100%, 0.9);
+  background-clip: padding-box;
+  border-radius: 0.375rem;
+  border-color: rgb(var(--color-gray-600) / 0.5);
+}
