--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -22,6 +22,13 @@ html {
   }
 }
 
+.hero-bg {
+  background-image: url(/assets/backgrounds/hero.svg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: top center;
+}
+
 .button-rainbow {
   position: relative;
   background-color: hsla(0, 0%, 100%, 0.9);
